Issue #357 - Consolidates z-index variables from individual components to _global variables

--- a/src/scss/variables/_forms.scss
+++ b/src/scss/variables/_forms.scss
@@ -151,6 +151,3 @@ $input-group-transparent-addon-bg: transparent !default;
 $input-group-transparent-addon-border-color: null !default;
 $input-group-transparent-addon-border-width: 0 !default;
 $input-group-transparent-addon-color: null !default;
-
-$zindex-input-group-hover: 3 !default;
-$zindex-input-group-focus: $zindex-input-group-hover + 1 !default; // 4
